# smallcheck

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  serial.rs  tester.rs
